bluec-tests/tests/invalid/types_short/missing_cast_parentheses.c
int main(void) {
    /* The type specifier in a cast expression must be in parentheses */
    return short 0;
}